--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,138 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+div {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+#home {
+    height: 100vh
+}
+
+li {
+    display: inline;
+    color: white;
+    margin: 8px 28px;
+}
+
+li:hover {
+    color: orange;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+ul {
+    margin-top: 0%;
+    padding: 0;
+    padding-top: 8pt;
+}
+
+#icon {
+    border-radius: 50%;
+    width: 30px;
+}
+
+#icon:hover {
+    background-color: orange;
+}
+
+#down {
+    border-radius: 50%;
+    width: 40px;
+    background-color: white
+}
+
+#down:hover {
+    background-color: orange
+}
+
+#home>footer {
+    position: fixed;
+    left: 0;
+    bottom: 40px;
+    width: 100%;
+    text-align: center;
+}
+
+#emp {
+    color: white
+}
+
+input {
+    padding: 18px 20px;
+    color: #eee;
+    background: #373233;
+    border: 0;
+    outline: none;
+    font-size: 15px;
+    line-height: 18px;
+    width: 65%;
+}
+
+#tabletxt {
+    color: #EBEEEE;
+    font-size: 20px
+}
+
+#contact td {
+    padding-bottom: 21px
+}
+
+#textarea {
+    padding: 18px 20px;
+    color: #eee;
+    background: #373233;
+    margin-bottom: 42px;
+    border: 0;
+    height: 200px;
+    outline: none;
+    font-size: 15px;
+    line-height: 24px;
+    width: 65%
+}
+
+#resume h1 {
+    font: 18px/24px 'opensans-bold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding-left: 20px
+}
+
+#resume span {
+    border-bottom: 3px solid #11ABB0;
+    padding-bottom: 6px;
+}
+
+#resume>h3 {
+    font: 25px/30px 'opensans-bold', sans-serif;
+}
+
+#resume td {
+    padding-bottom: 0
+}
+
+#Rtable {
+    margin-bottom: 48px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #E8E8E8;
+    width: 95%;
+    margin-left: 2.5%;
+}
+
+h3 {
+    margin: 0
+}
+
+h1 {
+    margin-top: 0
+}
+
+#about footer {
+    position: fixed;
+    left: 0;
+    bottom: 40px;
+    width: 100%;
+    text-align: center;
 }
