--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ div {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-#home {
+#home #about #contact {
     height: 100vh
 }
 
